--- a/Web/signin.html
+++ b/Web/signin.html
@@ -11,12 +11,14 @@
 
 		nav {
 			border-bottom: 1px solid lightgray;
-			height: 60px;
+			height: 44px;
+			padding-top: 0px !important;
+			padding-bottom: 0px !important;
 			font-weight: bold;
 		}
 
 		.container {
-			margin-top: 75px;
+			margin-top: 60px;
 		}
 
 		.form-control:focus { 
@@ -47,8 +49,10 @@
 		#alert_error {
 			display: none;
 		}
-
+		
 	</style>
+
+	<link href="dark.css" rel="stylesheet" />
 	
 	<script>
 	
