Fixed dark mode button highlighting, larger bottom pane.

--- a/Web/index.html
+++ b/Web/index.html
@@ -187,7 +187,10 @@
 		}
 		
 		.offcanvas-header {
-			/* padding-bottom: 0px; */
+		}
+		
+		.offcanvas-bottom {
+			height: 35vh;			
 		}
 		
 		#newpost_pane {
