--- a/Web/index.html
+++ b/Web/index.html
@@ -705,6 +705,14 @@
 		}
 	
 		document.addEventListener("DOMContentLoaded", function() {
+			if (isAndroid()) {
+				var link_tag = document.createElement("link");
+				link_tag.setAttribute("rel", "stylesheet");
+				link_tag.setAttribute("href", "android.css");
+	
+				var head_tag = document.getElementsByTagName("head")[0];
+				head_tag.appendChild(link_tag);
+			}
 		});
 	
 	</script>
