Improved new post text size, padding.

--- a/Web/index.html
+++ b/Web/index.html
@@ -215,9 +215,9 @@
 		}
 		
 		#newpost_text {
-			margin-top: 70px;
-			padding-left: 14px;
-			padding-right: 14px;
+			margin-top: 60px;
+			padding-left: 15px;
+			padding-right: 15px;
 			border: 0;
 			width: 95%;
 			height: 400px;
@@ -225,6 +225,10 @@
 		
 		#newpost_text:focus {
 			outline: none;
+		}
+		
+		textarea {
+			font-size: 1.1rem;
 		}
 		
 	</style>
