--- a/Web/index.html
+++ b/Web/index.html
@@ -297,6 +297,10 @@
 				var blogs = data.destination;
 				var choices_item = document.getElementById("blogs_pane_choices");
 
+				if (document.epilogueBlogName != null) {
+					document.getElementById("newpost_hostname").innerText = document.epilogueBlogName;
+				}
+
 				for (let i = 0; i < blogs.length; i++) {
 					let info = blogs[i];
 					if (info["microblog-default"] == true) {
@@ -745,8 +749,16 @@
 				closeBookDetails();
 			});
 		}
+
+		function setupCurrentBlog() {
+			document.epilogueBlogUID = localStorage.getItem("current_blog_uid");
+			document.epilogueBlogName = localStorage.getItem("current_blog_name");			
+		}
 	
 		function selectBlog(uid, name) {
+			localStorage.setItem("current_blog_uid", uid);
+			localStorage.setItem("current_blog_name", name);
+			
 			document.epilogueBlogUID = uid;
 			document.epilogueBlogName = name;
 			document.getElementById("newpost_hostname").innerText = name;
@@ -754,6 +766,7 @@
 		}
 	
 		function signOut() {
+			localStorage.clear();
 			location.href = "epilogue://signout";
 		}
 	
@@ -766,6 +779,7 @@
 			document.epilogueToken = token;
 			
 			verifyToken(function() {
+				setupCurrentBlog();
 				loadBlogs();
 				loadBookshelves(function() {					
 					loadBooks(document.epilogueBookshelves.items[0].id);
