Updated with lighter dark mode link color.

--- a/Web/index.html
+++ b/Web/index.html
@@ -845,7 +845,7 @@
 		<h5 class="offcanvas-title" id="profile_pane_label"><span id="profile_username"></span></h5>
 	</div>
 	<div class="offcanvas-body" id="profile_pane_content">
-		<button class="btn btn-light" onClick="signOut();">Sign Out</button>
+		<p><button class="btn btn-light" onClick="signOut();">Sign Out</button></p>
 	</div>
 
 </div>
