Smaller profile pane.

--- a/Web/index.html
+++ b/Web/index.html
@@ -176,6 +176,10 @@
 			padding-top: 12px;
 		}
 		
+		#profile_pane {
+			height: 150px;
+		}
+		
 		#profile_pane_content {
 			padding-top: 0px;
 		}
