--- a/Web/signin.html
+++ b/Web/signin.html
@@ -100,6 +100,17 @@
 			return (/android/i.test(user_agent));
 		}
 
+		document.epilogueShowError = function(error) {
+			if (error.length == 0) {
+				document.getElementById("alert_error").style.display = "none";
+				document.getElementById("alert_ok").style.display = "block";
+			}
+			else {
+				document.getElementById("alert_error").style.display = "block";
+				document.getElementById("alert_error").innerText = error;;
+			}
+		}
+
 		document.addEventListener("DOMContentLoaded", function() {
 			if (isAndroid()) {
 				var link_tag = document.createElement("link");
