Expanded description of signing in with Apple.

--- a/Web/signin.html
+++ b/Web/signin.html
@@ -199,7 +199,7 @@
 	<button type="submit" class="btn btn-light" onClick="submitSignin();">Sign In</button>
 
 	<p><hr /></p>
-	<p>New to Micro.blog?</p>
+	<p>New to Micro.blog? You can register here by signing in with your Apple ID:</p>
 	
 	<p>
 	<button type="submit" class="btn btn-light" onClick="signInWithApple();">
