Fixed width problems, especially on iPad.

--- a/Web/index.html
+++ b/Web/index.html
@@ -12,6 +12,10 @@
 		body {
 		}
 
+		.container {
+			max-width: 100%;
+		}
+
 		.form-control:focus { 
 			border-color: darkgray !important;
 			box-shadow: none !important;
