Unfocus search field when scrolling to hide iOS keyboard.

--- a/Web/index.html
+++ b/Web/index.html
@@ -836,6 +836,10 @@
 				}
 			}
 		});
+
+		window.addEventListener("scroll", function() {
+			document.getElementById("search_field").blur();
+		}, false);
 	
 	</script>
 </head>
